# QlockTwo_DIY

CAD files/: spacers.ai
esp32c3-multicrate/: Cargo.toml  deploy.bat  sdkconfig.defaults  table.csv
esp32c3-multicrate/.cargo/: config.toml
esp32c3-multicrate/other/: Cargo.toml
esp32c3-multicrate/other/src/: lib.rs
esp32c3-multicrate/spanish_clockface/: Cargo.toml
esp32c3-multicrate/spanish_clockface/src/: lib.rs
esp32c3-multicrate/src/: adc.rs  clock.rs  clock_face.rs  common.rs  main.rs
esp32c3-rust/: .gitignore  Cargo.toml  deploy.bat  sdkconfig.defaults
esp32c3-rust/.cargo/: config.toml
esp32c3-rust/src/: adc.rs  clock.rs  clock_face.rs  common.rs  led_strip.rs  main.rs  status_led.rs
esp32c3-rust_old/: .gitignore  Cargo.toml  build_and_flash.bat
esp32c3-rust_old/.cargo/: config
esp32c3-rust_old/src/: led_strip.rs  main.rs
esp8266-rust/: Cargo.toml  build_and_flash.bat
esp8266-rust/.cargo/: config
esp8266-rust/src/: main.rs  pins.rs
front/: Qlocktwo_esp.ai  Qlocktwo_esp_flipped.ai  Qlocktwo_esp_larger_flipped.ai  links.txt
