[package]
name = "a_clockwork_blue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3 = "0.3.0"
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = "0.20.8"
esp-idf-svc = { version = "0.23.1", features = ["binstart"] }

[build-dependencies]
embuild = "0.24.5"
anyhow = "1"